--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,11 @@
     <string name="app_name">Conversor Temperaturav2</string>
     <string name="string_temperature">Temperatura</string>
     <string name="hint_temperature">Digite a temperatura</string>
-    <string name="string_btnCelsius">Celsius</string>
     <string name="str_btnFahrenheit">Fahrenheit</string>
     <string name="str_btnCelsius">Celsius</string>
+    <string name="str_btnKelvin">Kelvin</string>
     <string name="msgCtoF">Realizada a conversão de Celsius para Fahrenheit</string>
     <string name="msgFtoC">Realizada a conversão de Fahrenheit para Celsius</string>
+    <string name="msgCtoK">Realizada a conversão de Celsius para Kelvin</string>
     <string name="error_popup_notify">Não foi possível converter a temperatura com os dados informados.</string>
 </resources>
